force-app/main/default/objects/Deal_x_Funding_Vehicle__c/Deal_x_Funding_Vehicle__c.object-meta.xml
<CustomObject>
    <description>This Object connects Funding Vehicles to Deals</description>
    <label>Deal to Funding Vehicle Connection</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Deal to Funding Vehicle Connection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal to Funding Vehicle Connections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>