force-app/main/default/objects/Deal_x_Funding_Vehicle__c/fields/Buyback_Date__c.field-meta.xml
<CustomField>
    <fullName>Buyback_Date__c</fullName>
    <label>Buyback Date</label>
    <type>Date</type>
</CustomField>