force-app/main/default/objects/Deal_x_Funding_Vehicle__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Deal to Funding Vehicle Connections</relationshipLabel>
    <relationshipName>Deal_to_Funding_Vehicle_Connections</relationshipName>
    <type>Lookup</type>
</CustomField>