force-app/main/default/objects/Deal_x_Funding_Vehicle__c/fields/Funding_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Funding_Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funding Vehicle</label>
    <referenceTo>Funding_Vehicle__c</referenceTo>
    <relationshipLabel>Deal to Funding Vehicle Connections</relationshipLabel>
    <relationshipName>Deal_to_Funding_Vehicle_Connections</relationshipName>
    <type>Lookup</type>
</CustomField>