force-app/main/default/objects/Deal_x_Funding_Vehicle__c/fields/Include_Yes_No__c.field-meta.xml
<CustomField>
    <fullName>Include_Yes_No__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to include Deal in Securitization</description>
    <label>Include In Securitization</label>
    <type>Checkbox</type>
</CustomField>