force-app/main/default/objects/Deal_x_Funding_Vehicle__c/fields/QC_Batch_Number__c.field-meta.xml
<CustomField>
    <fullName>QC_Batch_Number__c</fullName>
    <label>QC Batch Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>