force-app/main/default/objects/Deal_x_Funding_Vehicle__c/fields/QC_Date__c.field-meta.xml
<CustomField>
    <fullName>QC_Date__c</fullName>
    <label>QC Date</label>
    <type>Date</type>
</CustomField>