force-app/main/default/objects/Deal_x_Funding_Vehicle__c/fields/QC_Yes_No__c.field-meta.xml
<CustomField>
    <fullName>QC_Yes_No__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has this Loan been checked for Quality Control?</description>
    <inlineHelpText>Has this Loan been checked for Quality Control?</inlineHelpText>
    <label>QC</label>
    <type>Checkbox</type>
</CustomField>