force-app/main/default/objects/Deal_x_Funding_Vehicle__c/fields/Sent_to_Audit__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_Audit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has this Deal been sent to audit?</description>
    <inlineHelpText>Has this Deal been sent to audit?</inlineHelpText>
    <label>Sent to Audit</label>
    <type>Checkbox</type>
</CustomField>