force-app/main/default/objects/Deal_x_Funding_Vehicle__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Deal__c</columns>
    <columns>Funding_Vehicle__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Include_Yes_No__c</columns>
    <columns>QC_Yes_No__c</columns>
    <columns>QC_Batch_Number__c</columns>
    <columns>QC_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>